--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "start": "nodemon index.js",
-    "test": "jest"
+    "test": "clear && jest"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
